Fixed the overlap text bug.

--- a/Scripts/engine/css/style.css
+++ b/Scripts/engine/css/style.css
@@ -275,3 +275,8 @@
 .help-container .help-image{
 	padding-bottom: 10px;
 }
+
+.sel-image-description{
+	margin-left :1%!important;
+	margin-right :1%!important;
+}
